Closed
Bug 957468
Opened 12 years ago
Closed 12 years ago
remove some unnecessary offline code in MediaStreamGraph
Categories
(Core :: Web Audio, defect)
Tracking
()
RESOLVED
FIXED
mozilla29
People
(Reporter: karlt, Assigned: karlt)
Details
Attachments
(2 files)
|
1.04 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
|
3.18 KB,
patch
|
ehsan.akhgari
:
review+
|
Details | Diff | Splinter Review |
No description provided.
| Assignee | ||
Comment 1•12 years ago
|
||
This was added in http://hg.mozilla.org/mozilla-central/rev/894831c54271
I'm not clear why. Perhaps, contrary to the comment, this may have meant that DestroyNonRealtimeInstance would restart the graph thread before changes in bug 943461, but I don't think it will now.
Attachment #8356963 -
Flags: review?(roc)
| Assignee | ||
Comment 2•12 years ago
|
||
This variable is used only in an assertion.
mLifecycleState ensures that the assertion does not fail.
Attachment #8356964 -
Flags: review?(ehsan)
Attachment #8356963 -
Flags: review?(roc) → review+
| Assignee | ||
Comment 3•12 years ago
|
||
Whiteboard: [leave open]
Comment 4•12 years ago
|
||
Updated•12 years ago
|
Attachment #8356964 -
Flags: review?(ehsan) → review+
| Assignee | ||
Comment 5•12 years ago
|
||
Flags: in-testsuite-
Whiteboard: [leave open]
Comment 6•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
You need to log in
before you can comment on or make changes to this bug.
Description
•