b=957468 don't unset mNonRealtimeProcessing after offline graph completion r=roc

--HG--
extra : transplant_source : %D1%17%20%079%82%2B%91ES%B5%CC%83%E3t%8B%F9%A8%D6%E7