content/media/MediaStreamGraph.cpp
@@ -1619,11 +1619,6 @@ MediaStreamGraphImpl::AppendMessage(ControlMessage* aMessage)
         gGraph = nullptr;
       }
       delete this;
-    } else if (!mRealtime) {
-      // Make sure to mark the graph as not doing non-realtime processing,
-      // because otherwise AppendMessage will try to ensure that the graph
-      // is running, and we will never manage to release our resources.
-      mNonRealtimeProcessing = false;
     }
     return;
   }
